Fix header book margin on small widths

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -72,6 +72,7 @@
         text-align: center;
         .header-book {
             width: 30vw;
+            margin: 0em 0.25em 0.75em 0.25em;
         }
     }
 }
@@ -223,10 +224,12 @@
             }
         }
 
+
         .trigger {
             clear: both;
             display: none;
         }
+
 
         &:hover .trigger {
             display: block;
@@ -559,7 +562,7 @@
     }
 
     input[type="email"] {
-        background-color: lighten($background-color, 5%);
+        background-color: lighten($background-color, 15%);
         font-family: $base-font-family;
         font-size: 16px;
         color: $text-color;
@@ -582,6 +585,11 @@
         margin-left: $spacing-unit / 4;
         font-variant: small-caps;
         cursor: pointer;
+        transition: 0.2s;
+        &:hover {
+            background-color: $brand-color-light;
+            transition: 0.2s;
+        }
     }
     @include media-query($on-palm) {
         display: none;
@@ -605,7 +613,7 @@
     }
 
     input[type="email"] {
-        background-color: lighten($background-color, 5%);
+        background-color: lighten($background-color, 15%);
         font-family: $base-font-family;
         font-size: 16px;
         color: $text-color;
